mini fixes page accueil

--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -51,15 +51,15 @@
 <!--				<li><a tabindex="0" href="/charte/">Charte du candidat</a></li>-->
 <!--				<li class="divider"></li>-->
 				<li><a tabindex="0" href="https://articles.laprimaire.org" target="_blank">Actualités</a></li>
-				<li><a tabindex="0" target="_blank" href="https://laprimaire.org/manifeste/">Manifeste</a></li>
+				<li><a tabindex="0" href="/manifeste/">Manifeste</a></li>
 				<li><a tabindex="0" href="/reglement/">Règlement et Calendrier</a></li>
                 <li><a tabindex="0" href="/charte/">Charte du candidat</a></li>
                 <li class="divider"></li>
-				<li><a tabindex="0" target="_blank" href="https://laprimaire.org/equipe/">L'équipe</a></li>
-				<li><a tabindex="0" target="_blank" href="https://laprimaire.org/contact/">Nous contacter</a></li>
-				<li><a tabindex="0" target="_blank" href="https://laprimaire.org/presse/">Accès presse</a></li>
+				<li><a tabindex="0" href="/equipe/">L'équipe</a></li>
+				<li><a tabindex="0" href="/contact/">Nous contacter</a></li>
+				<li><a tabindex="0" href="/presse/">Accès presse</a></li>
 				<li class="divider"></li>
-				<li><a tabindex="0" target="_blank" href="https://laprimaire.org/legal/">Mentions légales</a></li>
+				<li><a tabindex="0" href="/legal/">Mentions légales</a></li>
 				<li><a tabindex="0" href="https://s3.eu-central-1.amazonaws.com/laprimaire/documents/LaPrimaire.org+-+Statuts+-+2016.12.01.pdf" target="_blank">Statuts</a></li>
 				<li><a tabindex="0" href="https://s3.eu-central-1.amazonaws.com/laprimaire/documents/LaPrimaire.org+-+RI+-+2016.12.01.pdf" target="_blank">Règlement Intérieur</a></li>
 				<!--<li><a tabindex="0" href="/calendrier/">Evènements</a></li>-->
