--- a/layouts/navbar.html
+++ b/layouts/navbar.html
@@ -61,7 +61,7 @@
 				<li class="divider"></li>
 				<li><a tabindex="0" href="/legal/">Mentions légales</a></li>
 				<li><a tabindex="0" href="https://s3.eu-central-1.amazonaws.com/laprimaire/documents/LaPrimaire.org+-+Statuts+-+2016.12.01.pdf" target="_blank">Statuts</a></li>
-				<li><a tabindex="0" href="https://s3.eu-central-1.amazonaws.com/laprimaire/documents/LaPrimaire.org+-+RI+-+2016.12.01.pdf" target="_blank">Règlement Intérieur</a></li>
+				<li><a tabindex="0" href="https://s3.eu-central-1.amazonaws.com/laprimaire/documents/LaPrimaire.org+-+RI+-+2017.01.01.pdf" target="_blank">Règlement Intérieur</a></li>
 				<!--<li><a tabindex="0" href="/calendrier/">Evènements</a></li>-->
 			</ul>
 		    </li>
@@ -80,7 +80,7 @@
 			</ul>
 		    </li>-->
 		    <li <% if not item[:home] %>class="active"<% end %>>
-			    <a tabindex="0" data-target="#EnrollNow" class="joinus_action" data-toggle="modal" style="cursor:pointer;<% if not item[:home] %>background-color:#d91d1c;<% end %>">Etre candidat</a>
+			    <a tabindex="0" href="/inscription-candidat/" style="cursor:pointer;<% if not item[:home] %>background-color:#d91d1c;<% end %>">Etre candidat</a>
                     </li>
 		    <li <% if not item[:home] %>class="active"<% end %>>
 			    <a tabindex="0" href="https://laprimaire.org/adherer/" target="_blank" class="donate-link" style="cursor:pointer;<% if not item[:home] %>background-color:#527bdd;<% end %>">Faire un don</a>
