--- a/layouts/head.html
+++ b/layouts/head.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="<%= @item[:image].nil? ? "https://s3.eu-central-1.amazonaws.com/laprimaire/laprimaire-banner-rectangle.jpg": "#{@item[:image]}" %>">
     <meta name="twitter:description" content="<%= @item[:description].nil? ? "LaPrimaire.org organise une primaire hors partis politiques pour permettre aux français de choisir leurs candidats aux élections de 2017 de manière transparente et démocratique. LaPrimaire.org vise à rassembler les citoyens déçus et lassés des politiques et qui souhaitent redonner du sens aux élections en soutenant et participant à une grande primaire citoyenne, apartisane, ouverte, en 2017 afin d'élire des candidats vraiment représentatifs.": "#{@item[:description]}" %>">
     <title><%= @item[:title].nil? ? "LaPrimaire.org - En 2017, tous candidats à l'élection présidentielle !":"#{@item[:title]}"  %></title>
-    <link rel="icon" type="image/png" href="/assets/images/favicon.png" />
+    <link rel="icon" type="image/png" href="https://s3.eu-central-1.amazonaws.com/laprimaire/images/favicon.png"/>
     <% if @config[:debug] %>
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/assets/style/laprimaire.css">
